<resources>
    <string name="app_name">Entrenate</string>

    <!-- Main Activity -->
    <string name="btn_clasifiacion">Clasificación</string>
    <string name="btn_ejercicios">Ejercicios</string>
    <string name="btn_preparador">Preparador Físico</string>
    <string name="btn_progreso">Progreso</string>
    <string name="btn_rutina">Rutina</string>
    <string name="btn_rutinaActual">Rutina Actual</string>
    <string name="btn_usuario">Usuario</string>

    <!-- Clasificación Activity -->
    <string name="txt_clasificacion_nombre">Nombre</string>
    <string name="btn_clasificacion_agregar">Agregar</string>

    <!-- agregarEjercicios Activity -->
    <string name="txt_agregarEjercicios_nombre">Nombre ejercicio</string>
    <string name="txt_agregarEjercicios_descripcion">Descripción ejercicio</string>
    <string name="txt_agregarEjercicios_video">Link video Youtube</string>
    <string name="btn_agregarEjercicios_agregar">Agregar</string>
    <string name="txt_ejericicios_clasificacion">Clasificacion</string>
    <string name="txt_ejericicios_ejercicios">Ejercicios</string>
    <string name="btn_agregarEjercicios_imagen">Seleccionar Imagen</string>
    <string name="img_ejercicios">Imagen</string>
    <string name="btn_ejercicios_verEjercicios">Ver Ejercicios</string>

    <!-- Navigation Drawer -->
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Elementos SideBar -->
    <string name="menu_home">Home</string>
    <string name="menu_ejercicios">Ejercicios</string>
    <string name="menu_rutinas">Rutinas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prefs_file">cl.ubb.entrenate.PREFERENCE_FILE_KEY</string>

</resources>