<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="cl.ubb.entrenate.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_ejercicios"
        android:name="cl.ubb.entrenate.ui.ejercicios.EjerciciosFragment"
        android:label="@string/menu_ejercicios"
        tools:layout="@layout/fragment_ejercicios" />

    <fragment
        android:id="@+id/nav_rutinas"
        android:name="cl.ubb.entrenate.ui.rutinas.RutinasFragment"
        android:label="@string/menu_rutinas"
        tools:layout="@layout/fragment_rutinas" />



</navigation>