<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_clasificacion"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="@string/btn_clasifiacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_progreso"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:onClick="onClick"
        android:text="@string/btn_progreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_preparador" />

    <Button
        android:id="@+id/btn_rutinaActual"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:onClick="onClick"
        android:text="@string/btn_rutinaActual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rutina" />

    <Button
        android:id="@+id/btn_usuario"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:onClick="onClick"
        android:text="@string/btn_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rutinaActual" />

    <Button
        android:id="@+id/btn_rutina"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:onClick="onClick"
        android:text="@string/btn_rutina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_progreso" />

    <Button
        android:id="@+id/btn_ejercicios"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="@string/btn_ejercicios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clasificacion" />

    <Button
        android:id="@+id/btn_preparador"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="@string/btn_preparador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ejercicios" />
</androidx.constraintlayout.widget.ConstraintLayout>