<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_clasificacion"
            android:icon="@drawable/ic_baseline_sort_24"
            android:title="Clasificacion" />
        <item
            android:id="@+id/nav_ejercicios"
            android:icon="@drawable/ic_baseline_fitness_center_24"
            android:title="@string/menu_ejercicios" />
        <item
            android:id="@+id/nav_rutinas"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_rutinas" />

    </group>

    <item android:title ="--------"
        android:top="350dp"
        >
        <menu>
            <item
                android:top ="150dp"
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="Perfil" />
        </menu>



    </item>

</menu>